LPD-19263 Make it clear that we only want to test against CLDR, we should remove the setting here once we moved to CLDR globally.